tests/negative/list_while_desc_push_continue_before_break_oob.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  i = 5
  while (i > 0) {
    if (i == 3) {
      i = i - 1
      continue
    }
    lst.push(i)
    if (i == 2) { break }
    i = i - 1
  }
  lst[3] = 1
  return 0
}
